fix: spacing at tablet width added a breakpoint at 1025

--- a/src/app/home/hero-banner/hero-banner.component.css
+++ b/src/app/home/hero-banner/hero-banner.component.css
@@ -18,9 +18,15 @@
         --gap-tag: 16px;
         --padding-tag: 16px;
         --padding-hero: 32px 90px;
-
     }
 }
+
+@media only screen and (max-width: 1025px) {
+    :host {
+        --padding-hero: 32px;
+    }
+}
+
 
 .heroWrapper {
     padding: var(--padding-hero);
