--- a/src/app/home/reinsurance-element/reinsurance-element.component.css
+++ b/src/app/home/reinsurance-element/reinsurance-element.component.css
@@ -10,6 +10,13 @@
     }
 }
 
+@media only screen and (max-width: 1025px) {
+    :host {
+        --padding: 32px;
+    }
+}
+
+
 .wrapper {
     padding: var(--padding);
     background-color: var(--clr-black);
